--- a/app/src/main/res/layout/fragment_shoppingcar.xml
+++ b/app/src/main/res/layout/fragment_shoppingcar.xml
@@ -99,7 +99,6 @@
             android:id="@+id/tv_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="购物袋合计  ￥9999"
             android:layout_marginLeft="@dimen/dp_13"
             android:layout_marginRight="@dimen/dp_13"
             android:textSize="17sp"
@@ -120,16 +119,19 @@
     </RelativeLayout>
     <TextView
         android:id="@+id/tv_tishi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:text="暂无数据"
         android:textSize="@dimen/sp_17"
         android:textColor="@color/black_666666"
         android:layout_centerInParent="true"
+        android:background="@color/white_default"
+        android:gravity="center"
+        android:layout_marginTop="180dp"
         android:visibility="gone"
         />
 
-     <include layout="@layout/item_loading"
+    <include layout="@layout/item_loading"
         android:id="@+id/loading"/>
     <include layout="@layout/item_login"
         android:id="@+id/view_login"/>
