--- a/app/src/main/res/layout/activity_my_attention.xml
+++ b/app/src/main/res/layout/activity_my_attention.xml
@@ -7,6 +7,17 @@
     tools:context=".ui.Personal.activity.MyAttentionActivity"
     android:orientation="vertical">
     <include layout="@layout/item_title"/>
+    <TextView
+        android:id="@+id/tv_tishiOne"
+        android:layout_width="100dp"
+        android:layout_height="match_parent"
+        android:textSize="@dimen/sp_17"
+        android:textColor="@color/black_666666"
+        android:text="还没关注商品哦,赶紧加入关注吧"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:gravity="center"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rc_attention"
         android:layout_width="match_parent"
