--- a/app/src/main/res/layout/activity_result_goods.xml
+++ b/app/src/main/res/layout/activity_result_goods.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/white_default"
     android:orientation="vertical">
-     <include layout="@layout/item_loading"
+    <include layout="@layout/item_loading"
         android:id="@+id/loading" />
     <ImageView
         android:id="@+id/iv_back"
@@ -48,10 +48,7 @@
             android:layout_height="wrap_content"
             android:background="@color/white_default"
             app:cardCornerRadius="15dp"
-            app:cardElevation="3dp"
-            app:cardMaxElevation="3dp"
-            app:cardUseCompatPadding="true"
-            >
+         android:layout_margin="@dimen/dp_13">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
